logs/django-omcmsmain.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_omCmsMain-0.0.34.egg-info'...
Listing './lib/python3.5/site-packages/omCmsMain'...
Listing './lib/python3.5/site-packages/omCmsMain/migrations'...
Compiling './lib/python3.5/site-packages/omCmsMain/settings.py'...
***   File "./lib/python3.5/site-packages/omCmsMain/settings.py", line 8
    print "MEDIA_URL: ", MEDIA_URL
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/omCmsMain/static'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/_Save'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/_Save/css'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/_Save/css/theme'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/_Save/css/theme/doctor'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/_Save/img'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/_Save/js'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/css'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/css/theme'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/css/theme/doctor'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/img'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/js'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/theme'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/theme/elevate'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/theme/elevate/css'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/theme/elevate/img'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/theme/elevate/js'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/themes'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/themes/MDL-portfolio'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/themes/MDL-portfolio/css'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/themes/MDL-portfolio/css/images'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/themes/MDL-portfolio/js'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/themes/elevate'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/themes/elevate/css'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/themes/elevate/img'...
Listing './lib/python3.5/site-packages/omCmsMain/static/omCmsMain/themes/elevate/js'...
Listing './lib/python3.5/site-packages/omCmsMain/templates'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/_SaveStuff'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/_SaveStuff/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/_theme'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/_theme/elevate'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/_theme/elevate/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/_theme/omCms'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/_theme/omCms/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/MDL-portfolio'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/MDL-portfolio/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/_Save'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/_Save/MDL-portfolio'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/_Save/MDL-portfolio/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/_Save/elevate'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/_Save/elevate/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/_Save/omCms'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/_Save/omCms/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/elevate'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/elevate/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/omCms'...
Listing './lib/python3.5/site-packages/omCmsMain/templates/omCmsMain/themes/omCms/sectionLayouts'...
Listing './lib/python3.5/site-packages/omCmsMain/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
